--- a/init/CMakeLists.txt
+++ b/init/CMakeLists.txt
@@ -16,22 +16,8 @@
 #  along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #
 
-project (krnl4 C)
+project (init C)
 cmake_minimum_required (VERSION 2.8)
-
-set (APPLICATION_NAME "krnl4")
-set (APPLICATION_CODENAME "${PROJECT_NAME}")
-set (APPLICATION_COPYRIGHT_YEARS "2014")
-set (APPLICATION_VERSION_MAJOR 0)
-set (APPLICATION_VERSION_MINOR 0)
-set (APPLICATION_VERSION_PATCH 1)
-set (APPLICATION_VERSION_TYPE SNAPSHOT)
-set (APPLICATION_VERSION_STRING
-  "${APPLICATION_VERSION_MAJOR}.
-   ${APPLICATION_VERSION_MINOR}.
-   ${APPLICATION_VERSION_PATCH}-
-   ${APPLICATION_VERSION_TYPE}"
-)
 
 set (project_BIN ${PROJECT_NAME})
 
@@ -45,30 +31,24 @@ set (project_SOURCES
   ${ARCH_ASM_DIR}/asm/boot/mbh.S
 )
 
-# Add source files
 set (project_SOURCES ${project_SOURCES}
-    krnl4.c
-)
+  mbi.c
+) 
 
 # Append root include and build/include directories
 include_directories (${INCLUDE_DIR})
 include_directories (${INCLUDE_ASM_DIR})
 
-# Set kernel linking flags
+# Set linking flags
 set (CMAKE_EXE_LINKER_FLAGS
-  "-Wl,--build-id=none -Wl,-N -Wl,-T ${CMAKE_CURRENT_SOURCE_DIR}/krnl4.lds" 
+  "-Wl,--build-id=none -Wl,-N"
 )
 
-# Set kernel C compilation flags
+# Set C compilation flags
 set (CMAKE_C_FLAGS "-ffreestanding -fno-builtin -nostdinc -nostdlib -std=c99")
 
-# Kernel ELF target
-add_executable (${project_BIN} ${project_SOURCES})
-
-# Add kernel dependencies
-target_link_libraries (${project_BIN} init)
-
-install (TARGETS ${project_BIN} DESTINATION bin)
+# Create the library
+add_library (${project_BIN} ${project_SOURCES})
 
 enable_testing ()
 
