Fixed directory paths inside floppy.img. Fixed grub.cfg menu entry.

--- a/tools/grub.cfg
+++ b/tools/grub.cfg
@@ -57,7 +57,7 @@ menuentry 'krnl4' {
 	insmod gzio
 	insmod part_msdos
 	insmod ext2
-	search --no-floppy --set=root --label KRNL4 --hint hd0,msdos1
-  multiboot krnl4 
+	search --no-floppy --set=root --label krnl4_boot --hint hd0,msdos1
+  multiboot /boot/krnl4 
 }
 
