--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,11 @@ language:
 
 compiler: 
   - clang
+  - gcc
 
 before_install:
   - sudo apt-get update -qq
+  - sudo apt-get install -qq build-essential
   - sudo apt-get install -qq clang cmake
 
 branches:
