--- a/kernel/CMakeLists.txt
+++ b/kernel/CMakeLists.txt
@@ -42,7 +42,7 @@ if (NOT CMAKE_ASM_COMPILER_WORKS)
 endif ()
 
 set (project_SOURCES
-  ${ARCH_ASM_DIR}/asm/boot/mbh.S
+  ${ARCH_ASM_DIR}/asm/boot/multiboot.S
 )
 
 # Add source files
