--- a/kernel/Doxyfile.in
+++ b/kernel/Doxyfile.in
@@ -753,11 +753,15 @@ WARN_LOGFILE           =
 # spaces.
 # Note: If this tag is empty the current directory is searched.
 
-INPUT                  = @doxy_main_page@ \                                                                                                                         
+INPUT                  = @doxy_main_page@ \                                                                                                                        
                          @PROJECT_SOURCE_DIR@ \                                                                                                                   
-                         @PROJECT_BINARY_DIR@ \                                                                                                                     
-                         @PROJECT_SOURCE_DIR@/../arch/ \                                                                                                            
-                         @PROJECT_SOURCE_DIR@/../init/ 
+                         @PROJECT_BINARY_DIR@ \                                                                                                                    
+                         @PROJECT_SOURCE_DIR@/../arch/ \
+                         @PROJECT_SOURCE_DIR@/../drivers/ \
+                         @PROJECT_SOURCE_DIR@/../include/ \
+                         @PROJECT_SOURCE_DIR@/../init/ \ 
+                         @PROJECT_SOURCE_DIR@/../kernel/ \ 
+                         @PROJECT_SOURCE_DIR@/../lib 
 
 # This tag can be used to specify the character encoding of the source files
 # that doxygen parses. Internally doxygen uses the UTF-8 encoding. Doxygen uses
@@ -777,7 +781,7 @@ INPUT_ENCODING         = UTF-8
 # *.md, *.mm, *.dox, *.py, *.f90, *.f, *.for, *.tcl, *.vhd, *.vhdl, *.ucf,
 # *.qsf, *.as and *.js.
 
-FILE_PATTERNS          = *.h *.c
+FILE_PATTERNS          = *.h
 
 # The RECURSIVE tag can be used to specify whether or not subdirectories should
 # be searched for input files as well.
@@ -1918,7 +1922,7 @@ ENABLE_PREPROCESSING   = YES
 # The default value is: NO.
 # This tag requires that the tag ENABLE_PREPROCESSING is set to YES.
 
-MACRO_EXPANSION        = NO
+MACRO_EXPANSION        = YES
 
 # If the EXPAND_ONLY_PREDEF and MACRO_EXPANSION tags are both set to YES then
 # the macro expansion is limited to the macros specified with the PREDEFINED and
@@ -1958,7 +1962,9 @@ INCLUDE_FILE_PATTERNS  =
 # recursively expanded use the := operator instead of the = operator.
 # This tag requires that the tag ENABLE_PREPROCESSING is set to YES.
 
-PREDEFINED             =
+PREDEFINED             = "__ARCH_X86_64__" \
+                         "__attribute__(x)" \
+                         "__attribute__(x)=" 
 
 # If the MACRO_EXPANSION and EXPAND_ONLY_PREDEF tags are set to YES then this
 # tag can be used to specify a list of macro names that should be expanded. The
