--- a/kernel/Doxyfile.in
+++ b/kernel/Doxyfile.in
@@ -910,7 +910,7 @@ USE_MDFILE_AS_MAINPAGE = @doxy_main_page@
 # also VERBATIM_HEADERS is set to NO.
 # The default value is: NO.
 
-SOURCE_BROWSR         = YES
+SOURCE_BROWSER         = YES
 
 # Setting the INLINE_SOURCES tag to YES will include the body of functions,
 # classes and enums directly into the documentation.
@@ -1963,6 +1963,7 @@ INCLUDE_FILE_PATTERNS  =
 # This tag requires that the tag ENABLE_PREPROCESSING is set to YES.
 
 PREDEFINED             = "__ARCH_X86_64__" \
+                         "__DEBUG__" \
                          "__attribute__(x)" \
                          "__attribute__(x)=" 
 
