--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ before_install:
   - sudo apt-get update -qq
   - sudo apt-get install -qq build-essential
   - sudo apt-get install -qq clang cmake
+  - sudo apt-get install -qq doxygen graphviz
 
 branches:
   only:
@@ -20,6 +21,7 @@ script:
   - cd build
   - cmake ..
   - make
+  - make doc
   - ctest 
   - sudo make install
 
