--- a/kernel/Doxyfile.in
+++ b/kernel/Doxyfile.in
@@ -44,7 +44,7 @@ PROJECT_NUMBER         = @VERSION_MAJOR@.@VERSION_MINOR@.@VERSION_PATCH@-@VERSIO
 # for a project that appears at the top of each page and should give viewer a
 # quick idea about the purpose of the project. Keep the description short.
 
-PROJECT_BRIEF          = "&micro;kernel written from scratch"
+PROJECT_BRIEF          = "L4 &micro;-kernel written from scratch"
 
 # With the PROJECT_LOGO tag one can specify an logo or icon that is included in
 # the documentation. The maximum height of the logo should not exceed 55 pixels
